# stellar-payment-dapp

./: .gitignore  LICENSE  README.md  level2-plan.md  package-lock.json  package.json  stellar_prd.md
contracts/crowdfunding/: Cargo.toml
contracts/crowdfunding/src/: lib.rs
contracts/payment-tracker/: Cargo.toml
contracts/payment-tracker/src/: lib.rs  test.rs
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: contract.ts  stellar.ts
src/types/: stellar-kit.d.ts
